# AI-Equity-Research-Platform

./: .env.example  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/: pyproject.toml
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/: __init__.py  main.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/api/routes/: analysis.py  audit.py  fixtures.py  health.py  markets.py  paper.py  risk.py  (+2 more)
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/core/: config.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/db/: session.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/models/: db_models.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/schemas/: domain.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/seed/: __init__.py  demo_data.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/app/services/: ai_analysis_service.py  analysis_service.py  app_settings_service.py  auto_paper_trader.py  market_repository.py  paper_trading_engine.py  polymarket_client.py  pricing_engine.py  risk_engine.py  settlement_service.py  soccer_data_client.py  sync_service.py  time_utils.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/scripts/: init_db.py
soccor-plymarket/polymarket-soccer-edge-agent/apps/api/tests/: test_api_routes.py  test_auto_paper_trader.py  test_paper_trading_engine.py  test_polymarket_client.py  test_pricing_engine.py  test_risk_engine.py  test_settlement_service.py
(+97 files in other folders)
